# tool-agent

./: .gitignore  Makefile  README.md  pyproject.toml
agent/: __init__.py  composer.py  config.py  mcp_client.py  model.py  router.py  server.py  tool_registry.py
agent/protocols/: a2a.py  mcp.py  websocket.py
agent/tools/: base.py  http.py  n8n.py
docker/: Dockerfile  docker-compose.yml
examples/: README.md  a2a_client.py  base_vs_finetuned_test.py  finetuned_firecrawl.py  finetuned_simple_test.py  gemini_firecrawl.py  mcp_client.py  rest_client.py  websocket_client.py
tests/: conftest.py  test_a2a.py  test_mcp.py  test_rest.py  test_router.py  test_websocket.py
training/: benchmark.py  convert_to_functiongemma.py  download_datasets.py  evaluate.py  export_gguf.py  finetune.py  generate_training_data.py  prepare_test_data.py  publish_hf.py  run_benchmark.sh  run_train_and_bench.sh
training/configs/: default.yaml  functiongemma.yaml  functiongemma_h100.yaml
training/data/: discovery_prompts.csv  integration_descriptions.csv  multi_step_scenarios.csv  negative_examples.csv  single_tool_tasks.csv  task_templates.csv
training/tasks/functiongemma_eval/: general.yaml  utils.py
